[gd_scene load_steps=14 format=2]

[ext_resource path="res://entities/coins.tscn" type="PackedScene" id=1]
[ext_resource path="res://entities/camera.tscn" type="PackedScene" id=2]
[ext_resource path="res://levels/level_layouts/level1.tscn" type="PackedScene" id=3]
[ext_resource path="res://entities/queen.tscn" type="PackedScene" id=4]
[ext_resource path="res://entities/player_ant.tscn" type="PackedScene" id=5]
[ext_resource path="res://entities/ant_master.tscn" type="PackedScene" id=6]
[ext_resource path="res://overlays/game_hud.tscn" type="PackedScene" id=7]
[ext_resource path="res://levels/game_logic.gd" type="Script" id=8]
[ext_resource path="res://levels/level_layouts/level_interface.gd" type="Script" id=13]
[ext_resource path="res://overlays/pause_menu.tscn" type="PackedScene" id=14]
[ext_resource path="res://entities/enemy_npc_ant.tscn" type="PackedScene" id=15]
[ext_resource path="res://entities/npc_ant.tscn" type="PackedScene" id=16]
[ext_resource path="res://entities/todeskaefer.tscn" type="PackedScene" id=17]

[node name="intro_level" type="Node2D"]
pause_mode = 2
script = ExtResource( 8 )
__meta__ = {
"_edit_horizontal_guides_": [ 1016.18 ],
"_edit_vertical_guides_": [ -723.609, 1360.41 ]
}

[node name="Level" parent="." instance=ExtResource( 3 )]
pause_mode = 1
script = ExtResource( 13 )

[node name="HUD" parent="." instance=ExtResource( 7 )]
pause_mode = 1

[node name="AntMaster" parent="." instance=ExtResource( 6 )]
pause_mode = 1

[node name="player" parent="AntMaster" instance=ExtResource( 5 )]
position = Vector2( 63.3114, 491.587 )

[node name="Queen" parent="AntMaster" instance=ExtResource( 4 )]
position = Vector2( 59.3039, 462.444 )
ant_birth_cost = 5
init_coins = 20

[node name="npc_ant" parent="AntMaster" groups=["ants"] instance=ExtResource( 16 )]
position = Vector2( 18.4743, 471.685 )

[node name="npc_ant2" parent="AntMaster" groups=["ants"] instance=ExtResource( 16 )]
position = Vector2( 109.974, 466.185 )

[node name="npc_ant3" parent="AntMaster" groups=["ants"] instance=ExtResource( 16 )]
position = Vector2( 97.9743, 487.685 )

[node name="npc_ant4" parent="AntMaster" groups=["ants"] instance=ExtResource( 16 )]
position = Vector2( 24.4743, 491.685 )

[node name="camera" parent="." instance=ExtResource( 2 )]
pause_mode = 1
scale = Vector2( 0.720927, 1 )
max_x = 1350
max_y = 1000

[node name="Items" type="Node2D" parent="."]
pause_mode = 1

[node name="coins2" parent="Items" instance=ExtResource( 1 )]
position = Vector2( 196.775, 582.368 )
total_resources = 20.0

[node name="coins" parent="Items" instance=ExtResource( 1 )]
position = Vector2( 285.913, 584.966 )
total_resources = 20.0

[node name="coins3" parent="Items" instance=ExtResource( 1 )]
position = Vector2( 196.743, 667.546 )
total_resources = 20.0

[node name="coins4" parent="Items" instance=ExtResource( 1 )]
position = Vector2( 278.601, 484.723 )
total_resources = 20.0

[node name="coins5" parent="Items" instance=ExtResource( 1 )]
position = Vector2( 201.637, 484.169 )
total_resources = 20.0

[node name="coins6" parent="Items" instance=ExtResource( 1 )]
position = Vector2( 289.435, 664.001 )
total_resources = 20.0

[node name="coins7" parent="Items" instance=ExtResource( 1 )]
position = Vector2( 95.4615, 530.129 )

[node name="coins8" parent="Items" instance=ExtResource( 1 )]
position = Vector2( 27.758, 530.077 )

[node name="coins9" parent="Items" instance=ExtResource( 1 )]
position = Vector2( 59.0924, 527.172 )

[node name="coins10" parent="Items" instance=ExtResource( 1 )]
position = Vector2( 238.946, 622.926 )
total_resources = 20.0

[node name="coins11" parent="Items" instance=ExtResource( 1 )]
position = Vector2( 239.946, 304.653 )
total_resources = 20.0

[node name="coins12" parent="Items" instance=ExtResource( 1 )]
position = Vector2( 1104.76, 23.3497 )
total_resources = 100.0

[node name="coins13" parent="Items" instance=ExtResource( 1 )]
position = Vector2( 1205.21, 27.0086 )
total_resources = 100.0

[node name="coins14" parent="Items" instance=ExtResource( 1 )]
position = Vector2( 1113.56, 108.174 )
total_resources = 100.0

[node name="coins15" parent="Items" instance=ExtResource( 1 )]
position = Vector2( 1072.26, 68.2646 )
total_resources = 100.0

[node name="coins16" parent="Items" instance=ExtResource( 1 )]
position = Vector2( 956.401, 105.895 )
total_resources = 100.0

[node name="coins17" parent="Items" instance=ExtResource( 1 )]
position = Vector2( 1209.08, 103.569 )
total_resources = 100.0

[node name="coins18" parent="Items" instance=ExtResource( 1 )]
position = Vector2( 1020.3, 28.4499 )
total_resources = 100.0

[node name="coins19" parent="Items" instance=ExtResource( 1 )]
position = Vector2( 952.597, 28.3979 )
total_resources = 100.0

[node name="coins20" parent="Items" instance=ExtResource( 1 )]
position = Vector2( 1025.3, 108.224 )
total_resources = 100.0

[node name="coins21" parent="Items" instance=ExtResource( 1 )]
position = Vector2( 1150.82, 62.1401 )
total_resources = 100.0

[node name="coins22" parent="Items" instance=ExtResource( 1 )]
position = Vector2( 990.162, 66.7052 )
total_resources = 100.0

[node name="coins23" parent="Items" instance=ExtResource( 1 )]
position = Vector2( 423.031, 544.992 )
total_resources = 70.0

[node name="coins24" parent="Items" instance=ExtResource( 1 )]
position = Vector2( 75.6401, 724.567 )

[node name="coins25" parent="Items" instance=ExtResource( 1 )]
position = Vector2( 375.154, 890.211 )
total_resources = 70.0

[node name="coins26" parent="Items" instance=ExtResource( 1 )]
position = Vector2( 425.551, 890.211 )
total_resources = 70.0

[node name="pause_menu" parent="." instance=ExtResource( 14 )]

[node name="menu" parent="pause_menu" index="0"]
visible = false

[node name="EnemyAntMaster" parent="." instance=ExtResource( 6 )]

[node name="enemy_npc_ant" parent="EnemyAntMaster" instance=ExtResource( 15 )]
position = Vector2( 983.13, 900.504 )

[node name="enemy_npc_ant2" parent="EnemyAntMaster" instance=ExtResource( 15 )]
position = Vector2( 1003.28, 903.333 )

[node name="enemy_npc_ant3" parent="EnemyAntMaster" instance=ExtResource( 15 )]
position = Vector2( 947.068, 915.707 )

[node name="enemy_npc_ant4" parent="EnemyAntMaster" instance=ExtResource( 15 )]
position = Vector2( 1118.54, 965.558 )

[node name="enemy_npc_ant5" parent="EnemyAntMaster" instance=ExtResource( 15 )]
position = Vector2( 1152.13, 952.83 )

[node name="enemy_npc_ant6" parent="EnemyAntMaster" instance=ExtResource( 15 )]
position = Vector2( 1161.07, 894.374 )

[node name="enemy_npc_ant7" parent="EnemyAntMaster" instance=ExtResource( 15 )]
position = Vector2( 1181.22, 897.202 )

[node name="enemy_npc_ant8" parent="EnemyAntMaster" instance=ExtResource( 15 )]
position = Vector2( 1217.98, 749.118 )

[node name="enemy_npc_ant9" parent="EnemyAntMaster" instance=ExtResource( 15 )]
position = Vector2( 1205.87, 961.315 )

[node name="enemy_npc_ant10" parent="EnemyAntMaster" instance=ExtResource( 15 )]
position = Vector2( 1239.46, 948.587 )

[node name="enemy_npc_ant11" parent="EnemyAntMaster" instance=ExtResource( 15 )]
position = Vector2( 1217.36, 861.368 )

[node name="enemy_npc_ant12" parent="EnemyAntMaster" instance=ExtResource( 15 )]
position = Vector2( 1237.52, 864.197 )

[node name="enemy_npc_ant13" parent="EnemyAntMaster" instance=ExtResource( 15 )]
position = Vector2( 1142.6, 849.671 )

[node name="enemy_npc_ant14" parent="EnemyAntMaster" instance=ExtResource( 15 )]
position = Vector2( 1209.03, 809.147 )

[node name="enemy_npc_ant15" parent="EnemyAntMaster" instance=ExtResource( 15 )]
position = Vector2( 1242.61, 796.419 )

[node name="enemy_npc_ant16" parent="EnemyAntMaster" instance=ExtResource( 15 )]
position = Vector2( 996.565, 903.332 )

[node name="enemy_npc_ant17" parent="EnemyAntMaster" instance=ExtResource( 15 )]
position = Vector2( 1200.3, 743.815 )

[node name="enemy_npc_ant18" parent="EnemyAntMaster" instance=ExtResource( 15 )]
position = Vector2( 960.503, 918.535 )

[node name="enemy_npc_ant19" parent="EnemyAntMaster" instance=ExtResource( 15 )]
position = Vector2( 1131.98, 968.386 )

[node name="enemy_npc_ant20" parent="EnemyAntMaster" instance=ExtResource( 15 )]
position = Vector2( 1165.56, 955.658 )

[node name="enemy_npc_ant21" parent="EnemyAntMaster" instance=ExtResource( 15 )]
position = Vector2( 1174.5, 897.202 )

[node name="enemy_npc_ant22" parent="EnemyAntMaster" instance=ExtResource( 15 )]
position = Vector2( 1194.66, 900.031 )

[node name="enemy_npc_ant23" parent="EnemyAntMaster" instance=ExtResource( 15 )]
position = Vector2( 1047.83, 914.293 )

[node name="enemy_npc_ant24" parent="EnemyAntMaster" instance=ExtResource( 15 )]
position = Vector2( 1219.3, 964.144 )

[node name="enemy_npc_ant25" parent="EnemyAntMaster" instance=ExtResource( 15 )]
position = Vector2( 1252.89, 951.416 )

[node name="enemy_npc_ant26" parent="EnemyAntMaster" instance=ExtResource( 15 )]
position = Vector2( 1230.8, 864.197 )

[node name="enemy_npc_ant27" parent="EnemyAntMaster" instance=ExtResource( 15 )]
position = Vector2( 1250.95, 867.025 )

[node name="enemy_npc_ant28" parent="EnemyAntMaster" instance=ExtResource( 15 )]
position = Vector2( 1156.04, 852.499 )

[node name="enemy_npc_ant29" parent="EnemyAntMaster" instance=ExtResource( 15 )]
position = Vector2( 1222.46, 811.975 )

[node name="enemy_npc_ant30" parent="EnemyAntMaster" instance=ExtResource( 15 )]
position = Vector2( 1278.7, 819.54 )

[node name="enemy_npc_ant31" parent="EnemyAntMaster" instance=ExtResource( 15 )]
position = Vector2( 978.883, 894.841 )

[node name="enemy_npc_ant32" parent="EnemyAntMaster" instance=ExtResource( 15 )]
position = Vector2( 999.036, 897.669 )

[node name="enemy_npc_ant33" parent="EnemyAntMaster" instance=ExtResource( 15 )]
position = Vector2( 942.821, 910.044 )

[node name="enemy_npc_ant34" parent="EnemyAntMaster" instance=ExtResource( 15 )]
position = Vector2( 1114.29, 959.895 )

[node name="enemy_npc_ant35" parent="EnemyAntMaster" instance=ExtResource( 15 )]
position = Vector2( 1147.88, 947.167 )

[node name="enemy_npc_ant36" parent="EnemyAntMaster" instance=ExtResource( 15 )]
position = Vector2( 1212.04, 909.476 )

[node name="enemy_npc_ant37" parent="EnemyAntMaster" instance=ExtResource( 15 )]
position = Vector2( 1176.98, 891.539 )

[node name="enemy_npc_ant38" parent="EnemyAntMaster" instance=ExtResource( 15 )]
position = Vector2( 1213.73, 743.455 )

[node name="enemy_npc_ant39" parent="EnemyAntMaster" instance=ExtResource( 15 )]
position = Vector2( 1201.62, 955.652 )

[node name="enemy_npc_ant40" parent="EnemyAntMaster" instance=ExtResource( 15 )]
position = Vector2( 1235.21, 942.924 )

[node name="enemy_npc_ant41" parent="EnemyAntMaster" instance=ExtResource( 15 )]
position = Vector2( 1213.12, 855.705 )

[node name="enemy_npc_ant42" parent="EnemyAntMaster" instance=ExtResource( 15 )]
position = Vector2( 1233.27, 858.534 )

[node name="enemy_npc_ant43" parent="EnemyAntMaster" instance=ExtResource( 15 )]
position = Vector2( 1138.35, 844.008 )

[node name="enemy_npc_ant44" parent="EnemyAntMaster" instance=ExtResource( 15 )]
position = Vector2( 1204.78, 803.483 )

[node name="enemy_npc_ant45" parent="EnemyAntMaster" instance=ExtResource( 15 )]
position = Vector2( 1238.37, 790.755 )

[node name="enemy_npc_ant46" parent="EnemyAntMaster" instance=ExtResource( 15 )]
position = Vector2( 992.318, 897.669 )

[node name="enemy_npc_ant47" parent="EnemyAntMaster" instance=ExtResource( 15 )]
position = Vector2( 1196.05, 738.152 )

[node name="enemy_npc_ant48" parent="EnemyAntMaster" instance=ExtResource( 15 )]
position = Vector2( 956.256, 912.872 )

[node name="enemy_npc_ant49" parent="EnemyAntMaster" instance=ExtResource( 15 )]
position = Vector2( 1127.73, 962.723 )

[node name="enemy_npc_ant50" parent="EnemyAntMaster" instance=ExtResource( 15 )]
position = Vector2( 1161.32, 949.995 )

[node name="enemy_npc_ant51" parent="EnemyAntMaster" instance=ExtResource( 15 )]
position = Vector2( 1192.91, 907.585 )

[node name="enemy_npc_ant52" parent="EnemyAntMaster" instance=ExtResource( 15 )]
position = Vector2( 1116.79, 861.332 )

[node name="enemy_npc_ant53" parent="EnemyAntMaster" instance=ExtResource( 15 )]
position = Vector2( 1227.17, 746.283 )

[node name="enemy_npc_ant54" parent="EnemyAntMaster" instance=ExtResource( 15 )]
position = Vector2( 1215.06, 958.481 )

[node name="enemy_npc_ant55" parent="EnemyAntMaster" instance=ExtResource( 15 )]
position = Vector2( 1248.64, 945.753 )

[node name="enemy_npc_ant56" parent="EnemyAntMaster" instance=ExtResource( 15 )]
position = Vector2( 1226.55, 858.534 )

[node name="enemy_npc_ant57" parent="EnemyAntMaster" instance=ExtResource( 15 )]
position = Vector2( 1246.7, 861.362 )

[node name="enemy_npc_ant58" parent="EnemyAntMaster" instance=ExtResource( 15 )]
position = Vector2( 1151.79, 846.836 )

[node name="enemy_npc_ant59" parent="EnemyAntMaster" instance=ExtResource( 15 )]
position = Vector2( 1218.21, 806.312 )

[node name="enemy_npc_ant60" parent="EnemyAntMaster" instance=ExtResource( 15 )]
position = Vector2( 1274.45, 813.877 )

[node name="enemy_npc_ant61" parent="EnemyAntMaster" instance=ExtResource( 15 )]
position = Vector2( 424.61, 510.778 )

[node name="Todeskaefer" parent="." instance=ExtResource( 17 )]
position = Vector2( 1159, 113 )

[connection signal="ant_dead" from="AntMaster" to="." method="_on_AntMaster_ant_dead"]
[connection signal="ant_spawn" from="AntMaster" to="." method="_on_AntMaster_ant_spawn"]
[connection signal="dig_hole" from="AntMaster/player" to="Level" method="_on_player_dig_hole"]
[connection signal="resource_update" from="AntMaster/Queen" to="." method="_on_Queen_resource_update"]
[connection signal="pressed" from="pause_menu/menu/Button" to="." method="_on_main_menu_Button_pressed"]

[editable path="pause_menu"]
